more integration WIP