@@ -3,11 +3,11 @@ package bio.terra.service.dataset;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 
-import bio.terra.common.auth.AuthService;
 import bio.terra.common.category.Integration;
 import bio.terra.common.configuration.TestConfiguration;
 import bio.terra.common.fixtures.JsonLoader;
 import bio.terra.integration.DataRepoFixtures;
+import bio.terra.integration.IntegrationTestConfiguration;
 import bio.terra.integration.UsersBase;
 import bio.terra.model.DataDeletionRequest;
 import bio.terra.model.DataDeletionTableModel;
@@ -23,45 +23,42 @@ import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 // TODO move me to integration dir
-@RunWith(SpringRunner.class)
-@SpringBootTest
+@ExtendWith(SpringExtension.class)
+@SpringBootTest(classes = IntegrationTestConfiguration.class)
 @ActiveProfiles({"google", "integrationtest"})
-@AutoConfigureMockMvc
-@Category(Integration.class)
-public class DatasetSoftDeletesTest extends UsersBase {
+@Tag(Integration.TAG)
+class DatasetSoftDeletesTest extends UsersBase {
 
   @Autowired private JsonLoader jsonLoader;
   @Autowired private DataRepoFixtures dataRepoFixtures;
-  @Autowired private AuthService authService;
   @Autowired private TestConfiguration testConfiguration;
 
   private UUID datasetId;
   private UUID profileId;
   private List<UUID> snapshotIds;
 
-  @Before
+  @Override
+  @BeforeEach
   public void setup() throws Exception {
     super.setup();
     dataRepoFixtures.resetConfig(steward());
     profileId = dataRepoFixtures.createBillingProfile(steward()).getId();
-    datasetId = null;
     snapshotIds = new LinkedList<>();
+    ingestDataset();
   }
 
-  @After
+  @AfterEach
   public void teardown() throws Exception {
     dataRepoFixtures.resetConfig(steward());
     for (UUID snapshotId : snapshotIds) {
@@ -78,9 +75,7 @@ public class DatasetSoftDeletesTest extends UsersBase {
   }
 
   @Test
-  public void testSoftDeleteHappyPath() throws Exception {
-    datasetId = ingestedDataset();
-
+  void testSoftDeleteHappyPath() throws Exception {
     // get row ids
     DatasetModel dataset = dataRepoFixtures.getDataset(steward(), datasetId);
     List<String> participantRowIds =
@@ -112,19 +107,17 @@ public class DatasetSoftDeletesTest extends UsersBase {
   }
 
   @Test
-  public void testSoftDeleteJsonArrayHappyPath() throws Exception {
-    datasetId = ingestedDataset();
-
+  void testSoftDeleteJsonArrayHappyPath() throws Exception {
     // get row ids
     DatasetModel dataset = dataRepoFixtures.getDataset(steward(), datasetId);
     List<UUID> participantRowIds =
         dataRepoFixtures.getRowIds(steward(), dataset, "participant", 3).stream()
             .map(UUID::fromString)
-            .collect(Collectors.toList());
+            .toList();
     List<UUID> sampleRowIds =
         dataRepoFixtures.getRowIds(steward(), dataset, "sample", 2).stream()
             .map(UUID::fromString)
-            .collect(Collectors.toList());
+            .toList();
 
     // build the deletion request with pointers to the two files with row ids to soft delete
     List<DataDeletionTableModel> dataDeletionTableModels =
@@ -145,8 +138,7 @@ public class DatasetSoftDeletesTest extends UsersBase {
   }
 
   @Test
-  public void wildcardSoftDelete() throws Exception {
-    datasetId = ingestedDataset();
+  void wildcardSoftDelete() throws Exception {
     String pathPrefix = "softDelWildcard" + UUID.randomUUID();
 
     // get 5 row ids, we'll write them out to 5 separate files
@@ -174,9 +166,7 @@ public class DatasetSoftDeletesTest extends UsersBase {
   }
 
   @Test
-  public void testSoftDeleteNotInFullView() throws Exception {
-    datasetId = ingestedDataset();
-
+  void testSoftDeleteNotInFullView() throws Exception {
     // get row ids
     DatasetModel dataset = dataRepoFixtures.getDataset(steward(), datasetId);
     List<String> participantRowIds =
@@ -242,10 +232,10 @@ public class DatasetSoftDeletesTest extends UsersBase {
     dataRepoFixtures.assertSnapshotTableCount(steward(), snapshotLess, "sample", 5);
   }
 
-  private UUID ingestedDataset() throws Exception {
+  private void ingestDataset() throws Exception {
     DatasetSummaryModel datasetSummaryModel =
         dataRepoFixtures.createDataset(steward(), profileId, "ingest-test-dataset.json");
-    UUID datasetId = datasetSummaryModel.getId();
+    datasetId = datasetSummaryModel.getId();
     IngestRequestModel ingestRequest =
         dataRepoFixtures.buildSimpleIngest(
             "participant", "ingest-test/ingest-test-participant.json");
@@ -257,6 +247,5 @@ public class DatasetSoftDeletesTest extends UsersBase {
         dataRepoFixtures.buildSimpleIngest("sample", "ingest-test/ingest-test-sample.json");
     ingestResponse = dataRepoFixtures.ingestJsonData(steward(), datasetId, ingestRequest);
     assertThat("correct sample row count", ingestResponse.getRowCount(), equalTo(7L));
-    return datasetId;
   }
 }
